turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: forward reference extends over definition of variable indice
    setCouleurBrosse(colors((indice+1)%(colors.length-1)))
                             ^